--- a/audio-player/style.css
+++ b/audio-player/style.css
@@ -16,7 +16,6 @@ body {
     z-index: -1;
 }
 .main {
-    /* height: calc(100vh - 70px); */
     flex: 1;
     display: flex;
     align-items: center;
@@ -26,8 +25,6 @@ body {
     width: 400px;
     border-radius: 10px;
     overflow: hidden;
-
-
 }
 .track-logo {
     height: 335px;
@@ -122,7 +119,7 @@ body {
     position: absolute;
     /* bottom: -10px; */
     left: 0;
-    top: 0;
+    top: -6px;
     height: 12px;
     width: 100%;
 }
