--- a/image-gallery/style.css
+++ b/image-gallery/style.css
@@ -16,9 +16,17 @@ body {
     padding: 0px 20px;
     background-color: #202020;
     flex-grow: 0;
+    position: relative;
+}
+.header span {
+    font-size: 24px;
+    color: #3168de;
 }
 .img-wrap {
-    width: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 180px;
 }
 #search {
     height: 30px;
@@ -26,13 +34,20 @@ body {
     border: none;
     text-indent: 15px;
     width: 250px;
+
+}
+.search-icon {
+    content: url("./assets/img/search.svg");
+    position: absolute;
+    cursor: pointer;
+    right: 35px;
 }
 #search:focus {
     box-shadow: 0 0 12px white ;
     outline: none;
 }
 #search::-webkit-search-cancel-button {
-    margin-right: 15px;
+    margin-right: 35px;
     appearance: none;
     height: 20px;
     width: 20px;
@@ -70,7 +85,25 @@ body {
     cursor: pointer;
 }
 .footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
     background-color: #202020;
     flex-grow: 0;
-    height: 7vh;
+    height: 50px;
+    color: white;
+}
+.github {
+    text-decoration: none;
+    color: white;
+}
+.github:hover {
+    transform: scale(1.1);
+}
+.github:visited {
+    color: white;
+}
+.rs:hover {
+    transform: scale(1.05);
 }
