--- a/random-game/style.css
+++ b/random-game/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'FB';
+    src: url('./assets/flappy-font.ttf') format('truetype');
+    font-weight: normal;
+}
 * {
     box-sizing: border-box;
 }
